--- a/GithubSearch/View/Base.lproj/Main.storyboard
+++ b/GithubSearch/View/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -27,6 +28,9 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="oqQ-so-E2o" kind="show" identifier="goToDetail" id="nWg-yO-Pwg"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -42,6 +46,31 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sj0-T6-PVp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="563.768115942029" y="166.74107142857142"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="oVJ-ik-WLp">
+            <objects>
+                <viewController id="oqQ-so-E2o" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="IAv-Un-3zr">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="htD-0P-eoF">
+                                <rect key="frame" x="151" y="242" width="134" height="89"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="vzp-5g-d32"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="MDe-cc-4tj"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="W3c-MS-lM7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1244.9275362318842" y="166.74107142857142"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="lEk-4Y-s09">
